build-13:
- Count casualties/kills, military/civilian buildings lost/defeated and present
  them in the general statistics menu (except for civilian buildings defeated,
  which is omitted from the user interface).
- Improved map options menu.
- Implemented counting of casualties and kills and added this data to the
  general statistics.
- Improved progresswindow use and added new loading screens.
- Added menu for editor to the mainmenu.
- Improved save game dialog.
- Improved mapselect and launchgame menu.
- Improved ingame UI.
- Implemented "/me" command for multiplayer chat.
- Improved multiplayermenu.
- Improved optionsmenu and added possibility to set autosave interval.
- Implemented option for maximum FPS to smaller CPU-usage.
- Improved editor new map dialog.
- Made automatic roadbuilding mode after creation of non-connected flag optional.
- Improved production program handling:
	* Eliminated the need for line numbers in the programs.
	* Fixed bug that the consume command required that all wares in a
	  consume-group must be of the same type. For example the command
	  "2=consume smoked_fish,smoked_meat 2" required 2 smoked_fish
	  or 2 smoked_meat. Now it will also work if there is only one of each.
	* Change the syntax of a consume-group to ware1[,ware2[,...]][:quantitiy]
	  (for example "smoked_fish,smoked_meat:2").
	* Extend the consume command to take any number of consume-groups (for
	  example "smoked_fish,smoked_meat:2 bread:2"). This means that unless all
	  consume-groups can be satisfied, nothing is consumed when the command fails.
	  This will fix many bugs in the game data where programs had for example
	  "2=consume smoked_fish,smoked_meat 2" and "3=consume bread 2". If there was
	  not 2 bread, it would consume 2 smoked_fish or 2 smoked_meat and then fail.
	* Get rid of the command check. It was only a work-around for the previously
	  deficient command consume (and some programs forgot to use it).